<resources>
    <string name="app_name">SoloDolphin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_to_my_app">Welcome to my App</string>
    <string name="my_restaurant_app">My Restaurant App</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="s_t_c">S T C</string>
    <string name="log_out">Log Out</string>
    <string name="search_your_food">Search your Food!</string>
    <string name="hello_there">Hello there!</string>
    <string name="what_do_you_want">What do you want ?</string>
    <string name="pizza">Pizza</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="_5_0">5.0</string>
    <string name="product_name">Product Name</string>
    <string name="min_199">Min - 199k</string>
    <string name="todo">TODO</string>
    <string name="make_order">Make Order</string>
    <string name="my_cart">My Cart</string>
</resources>